RSYS-007 | Update view and added more user controller

--- a/app/views/addresses/new.html.erb
+++ b/app/views/addresses/new.html.erb
@@ -23,6 +23,11 @@
 
   <p>
     <%= form.submit %>
+    <%#= link_to "Cancel", user_path(@user) %>
+<!--    <a><button><%#= link_to "Cancel", user_path(@user) %></button></a>-->
+    <button><%= link_to "Cancel", user_path(@user) %></button>
+
   </p>
 <% end %>
 
+<%=button_to "Cancel", user_path(@user), method: :get %>
