--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body style="background-color:AliceBlue">
-    <%= yield %>
+  <%= link_to 'Home', root_path %>
+  <%= yield %>
   </body>
 </html>
