--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -26,6 +26,8 @@
 
         <%= f.submit "Update", class: "btn-submit" %>
       <% end %>
+      <%#= link_to 'Go back', user_path(@user) %>
+      <%= link_to 'back', :back%>
 
 
     </div>
